# CCC-2023-03

./: .editorconfig  .gitignore  file_management.py  main.py  pyproject.toml  read_input.py  test.py
input/level-0/: level0_0.in
input/level-3/: level3_example.out
